bridge/base/0-hackspark-deadlock-syndicate-namespace.yaml
#! 0-hackspark-deadlock-syndicate-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
