bridge/base/api-gateway-deployment.yaml
#! api-gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
    namespace: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: api-gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: hackspark-deadlock_syndicate
            com.docker.compose.service: api-gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: hackspark-deadlock_syndicate
                com.docker.compose.service: api-gateway
                com.docker.compose.network.rentpi-net: "true"
        spec:
            containers:
                - name: api-gateway
                  image: hackspark-deadlock_syndicate-api-gateway
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-gatewa-8000
                      containerPort: 8000
