bridge/base/user-service-deployment.yaml
#! user-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
    namespace: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: user-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: hackspark-deadlock_syndicate
            com.docker.compose.service: user-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: hackspark-deadlock_syndicate
                com.docker.compose.service: user-service
                com.docker.compose.network.rentpi-net: "true"
        spec:
            containers:
                - name: user-service
                  image: hackspark-deadlock_syndicate-user-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: user-servi-8001
                      containerPort: 8001
