bridge/base/agentic-service-expose.yaml
#! agentic-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: agentic-service
    namespace: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: agentic-service
spec:
    selector:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: agentic-service
    ports:
        - name: agentic-se-8004
          port: 8004
          targetPort: agentic-se-8004
