bridge/base/analytics-service-expose.yaml
#! analytics-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: analytics-service
    namespace: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: analytics-service
spec:
    selector:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: analytics-service
    ports:
        - name: analytics--8003
          port: 8003
          targetPort: analytics--8003
