bridge/base/api-gateway-expose.yaml
#! api-gateway-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
    namespace: hackspark-deadlock-syndicate
    labels:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: api-gateway
spec:
    selector:
        com.docker.compose.project: hackspark-deadlock_syndicate
        com.docker.compose.service: api-gateway
    ports:
        - name: api-gatewa-8000
          port: 8000
          targetPort: api-gatewa-8000
