bridge/base/rentpi-net-network-policy.yaml
#! rentpi-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: rentpi-net-network-policy
    namespace: hackspark-deadlock-syndicate
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.rentpi-net: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.rentpi-net: "true"
